@@ -25,7 +25,7 @@ class ClientTest < TinyTds::TestCase
     
     should 'have a getters for the tds version information (brittle since conf takes precedence)' do
       assert_equal 9, @client.tds_version
-      assert_equal 'DBTDS_8_0 - Microsoft SQL Server 2000', @client.tds_version_info
+      assert_equal 'DBTDS_7_1 - Microsoft SQL Server 2000', @client.tds_version_info
     end
     
     should 'use UTF-8 client charset/encoding by default' do
